# superhq

./: .env  CHANGELOG.md  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  deploy-remote-web.yml  deploy-website.yml  release.yml
assets/: AppIcon.icns
assets/agents/: codex-config.toml
assets/themes/: catppuccin-latte-syntax.json  catppuccin-latte.json  catppuccin-macchiato-syntax.json  catppuccin-macchiato.json  catppuccin-mocha-syntax.json  catppuccin-mocha.json  sumi.json  superhq-dark.json  superhq-light.json  washi.json
crates/gpui-terminal/: Cargo.toml
crates/gpui-terminal/src/: block_elements.rs  colors.rs  event.rs  lib.rs  render.rs  view.rs
crates/superhq-remote-client/src/: client.rs  wasm.rs
crates/superhq-remote-client/web/: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts  wrangler.toml
crates/superhq-remote-client/web/src/: App.tsx  main.tsx  styles.css
crates/superhq-remote-client/web/src/components/: DesktopModalIllustration.tsx  PWAUpdatePrompt.tsx  QrScannerModal.tsx  Screen.tsx  SettingsSheet.tsx  Sheet.tsx  Terminal.tsx  Toast.tsx  TopBar.tsx
crates/superhq-remote-client/web/src/lib/: analytics.ts  session.ts  storage.ts  types.ts  wasm.ts
crates/superhq-remote-client/web/src/routes/: home.tsx  pair.tsx  workspace.tsx
crates/superhq-remote-client/web/src/state/: store.ts
crates/superhq-remote-host/: Cargo.toml
crates/superhq-remote-host/examples/: demo-server.rs
crates/superhq-remote-host/src/: auth.rs  handler.rs  lib.rs  server.rs  session.rs
crates/superhq-remote-host/tests/: roundtrip.rs
crates/superhq-remote-proto/src/: stream.rs  types.rs
docs/remote-control/: 00-overview.md  01-transport.md  02-auth.md
migrations/: 001_initial.sql  002_auto_launch_agent.sql
scripts/: generate_icon.py
specs/: 01-extract-watcher.md  02-fix-diff-cloning.md  03-lazy-highlights.md  04-reduce-render-allocs.md  18-agent-lifecycle-hooks.md
src/: assets.rs  main.rs  runtime.rs
src/agents/: claude.rs  codex.rs  mod.rs  pi.rs
src/db/: mod.rs  queries.rs  schema.rs
src/sandbox/: agent_config.rs  event_watcher.rs  mod.rs  pty_adapter.rs  secrets.rs  service.rs
src/ui/: dock.rs  mod.rs  setup.rs  theme.rs
src/ui/components/: mod.rs  scrollbar.rs  text_input.rs  toast.rs  tooltip.rs
src/ui/dialogs/: environment.rs  mod.rs  new_workspace.rs  ports.rs
src/ui/remote/: commands.rs  handler.rs  mod.rs
src/ui/review/: changes_tab.rs  diff_engine.rs  diff_service.rs  diff_view.rs  file_row.rs  highlighter.rs  mod.rs  watcher.rs
src/ui/settings/: about.rs  appearance.rs  card.rs  general.rs  mod.rs  providers.rs  shortcuts.rs
src/ui/sidebar/: workspace_item.rs  workspace_list.rs
src/ui/terminal/: boot.rs  lifecycle.rs  mod.rs  panel.rs  session.rs  workspace.rs
website/: README.md  astro.config.mjs  package.json
website/public/: CNAME
website/src/components/: AgentRow.astro  Agents.astro  Banner.astro  BlueprintFrame.astro  Features.astro  Footer.astro  Header.astro  Hero.astro  Remote.astro  RemoteShowcase.astro  ScreenshotFrame.astro  SecurityModel.astro  Shortcuts.astro  Testimonials.astro
website/src/layouts/: Layout.astro
website/src/pages/: index.astro
website/src/styles/: global.css
