[package]
name = "superhq"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = "0.2"
gpui-component = { version = "0.5", features = ["tree-sitter-languages"] }
gpui-component-assets = "0.5"
gpui-terminal = { path = "crates/gpui-terminal" }
portable-pty = "0.9"
parking_lot = "0.12"
shuru-sdk = { path = "../shuru/crates/shuru-sdk" }
shuru-proto = { path = "../shuru/crates/shuru-proto" }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1"
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-embed = "8"
aes-gcm = "0.10"
getrandom = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "native-tls", "stream", "blocking"] }
sha2 = "0.10"
base64 = "0.22"
toml = "1.1.0"
futures-util = "0.3"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
similar = "2"
flume = "0.12"
flate2 = "1"
tar = "0.4"
ropey = "=2.0.0-beta.1"
ignore = "0.4.25"
